# Instrument_Brachy_Embedded

./: CMakeLists.txt  CONTROL_ARCHITECTURE.drawio  README.md
include/: pin_def.h
main/: CMakeLists.txt  encoder.pio  main.c  micro_servo.c  motor_control.c  pin_def.h
